# s2client-proto

./: .gitignore  README.md  pyproject.toml  setup.py
s2clientprotocol/: common.proto  data.proto  debug.proto  error.proto  query.proto  raw.proto  sc2api.proto  score.proto  spatial.proto  ui.proto
